[gd_scene load_steps=2 format=3 uid="uid://cll4ogkvctpav"]

[ext_resource type="Script" uid="uid://47fqtnmcvbw0" path="res://menus/main_menu.gd" id="1_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Infinit Dungeon"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Start Game"

[node name="QuitButton" type="Button" parent="VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Quit"
